XMLtoCSV/objects/unpackaged/objects/Key_Message_vod__c.object
<CustomObject>
    <description>This object stores all Key Messages to be used in Call Reporting and on Product Strategies</description>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether this key message should appear in the call report as a possible message to deliver by the rep.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDN_Path_vod__c</fullName>
        <description>Location of the content in the CDN</description>
        <label>CDN Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_ID_vod__c</fullName>
        <description>CLM ID for the slide corresponding to this key message.</description>
        <label>CLM ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_vod__c</fullName>
        <description>Allows the Key Message to be categorized e.g. Efficacy or Safety.</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Efficacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tolerability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efficiencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Reaction_vod__c</fullName>
        <description>Comma Separated List of available reactions for a key message. If this field is empty, the default values from the Call2_Key_Messages_vod.Reaction_vod picklist will be used. Use &quot;,a,b,c&quot; to have the default value be blank.</description>
        <label>Custom Reaction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Text area that contains the text of the message.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Product Catalog records of type Detail Group.</description>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Key Messages (Detail Group)</relationshipLabel>
        <relationshipName>Key_Messages_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disable_Actions_vod__c</fullName>
        <description>Contains a list of user actions that are disabled when selected. Values: Swipe, Pinch To Exit

Swipe: When selected, the swipe action to move forward to the next slide/back to the previous slide is disabled. Creative Agencies will need to code the transition to the next/previous slide

Pinch To Exit: When selected, pinching to exit the media player is disabled. This is to allow for proper pinch and anti-pinch zoom in / out on PDF files.</description>
        <inlineHelpText>Contains a list of user actions that are disabled.
Swipe: When selected, the swipe action to move forward to the next slide/back to the previous slide is disabled.
Pinch To Exit: When selected, pinching to exit the media player is disabled.</inlineHelpText>
        <label>Disable Actions</label>
        <picklist>
            <picklistValues>
                <fullName>Navigation_Bar_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History_Buttons_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotation_Lock_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zoom_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swipe_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pinch_To_Exit_vod</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Display_Order_vod__c</fullName>
        <description>A way to determine the order in which the key message appears on the call report.  Lower number takes priority over a higher number.  Lower numbers display to the left of higher numbers.</description>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Shared_Resource_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if a Key Message is a CLM Shared resource</description>
        <label>Is Shared Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_vod__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zh_CN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Media_File_CRC_vod__c</fullName>
        <description>The device uses this field to determine if the local media is in the correct version. Matching is based on the file names.</description>
        <label>Media File CRC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_File_Name_vod__c</fullName>
        <description>Name of the Media File (including the file extension). A media file is linked to a key message using this field. The file name is case sensitive.</description>
        <externalId>true</externalId>
        <label>Media File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_File_Size_vod__c</fullName>
        <label>Media File Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_18_Digit_ID__c</fullName>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Share_To__c</fullName>
        <description>Share key messages with the appropriate user group</description>
        <label>Share To</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSL and CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAE, FAE and RAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAE and FAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAE and RAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales, RAM, NAE and FAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales and RAM</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Strategy_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the product strategy assigned to this key message.  A key message can be associated with a product or a product strategy, or both, or none.</description>
        <label>Product Strategy</label>
        <referenceTo>Product_Strategy_vod__c</referenceTo>
        <relationshipLabel>Key Messages</relationshipLabel>
        <relationshipName>Key_Message_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the product in the product catalog. This product is the topic of the key message. A key message can be associated with a product or a product strategy, or both, or none.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Key Messages</relationshipLabel>
        <relationshipName>Key_Message_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment_vod__c</fullName>
        <description>Holds the segment for which this key message should be displayed. If blank, then this key message will be displayed for accounts that are not aligned to a segment</description>
        <label>Segment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_Resource_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the shared resources which the key message references</description>
        <label>Shared Resource</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected Key Message must have Is_Shared_Resource_vod enabled.</errorMessage>
            <filterItems>
                <field>Key_Message_vod__c.Is_Shared_Resource_vod__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Key_Message_vod__c</referenceTo>
        <relationshipLabel>Shared Key Messages</relationshipLabel>
        <relationshipName>Shared_Key_Messages_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Slide_Version_vod__c</fullName>
        <description>Version of the CLM slide.</description>
        <label>Slide Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of the slide on the CDN. A piece of content will either be &apos;Approved&apos;, &apos;Staged&apos;, or &apos;Expired&apos;</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staged_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>External Id used by Veeva CRM for integration with Vault. Can be populated to aid in data loading.</description>
        <externalId>true</externalId>
        <label>Veeva External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vault_DNS_vod__c</fullName>
        <description>Vault DNS of the document.</description>
        <label>Vault DNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault_Doc_Id_vod__c</fullName>
        <description>Vault Id of the document</description>
        <label>Vault Document ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault_External_Id_vod__c</fullName>
        <description>External ID from Vault</description>
        <label>Vault External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault_GUID_vod__c</fullName>
        <description>Global Unique Identifier for Vault instance where this document resides.</description>
        <label>Vault GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault_Last_Modified_Date_Time_vod__c</fullName>
        <description>Last modified date time of the content as reported by Vault.</description>
        <label>Vault Last Modified Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vehicle_vod__c</fullName>
        <description>Used to record what collateral is used to deliver the Key Message. Comma separated list of message vehicles. The master list of message vehicles is kept in Call_Key_Messages_vod.Vehicle_vod.</description>
        <label>Vehicle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iOS_Viewer_vod__c</fullName>
        <description>Use WKWebView for improved view of HTML CLM on iOS 10 or later. Leave blank to use legacy view of HTML CLM.</description>
        <label>iOS Viewer</label>
        <picklist>
            <picklistValues>
                <fullName>WKWebView_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Key Message</label>
    <listViews>
        <fullName>Active_Key_Messages</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Active_vod__c</columns>
        <columns>PCYC_Share_To__c</columns>
        <columns>Description_vod__c</columns>
        <columns>Product_vod__c</columns>
        <columns>Disable_Actions_vod__c</columns>
        <columns>Language_vod__c</columns>
        <columns>Category_vod__c</columns>
        <columns>Display_Order_vod__c</columns>
        <columns>Product_Strategy_vod__c</columns>
        <columns>Media_File_Name_vod__c</columns>
        <columns>Media_File_Size_vod__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_vod__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Key Messages</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>PCYC_18_Digit_ID__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Product_vod__c</columns>
        <columns>Description_vod__c</columns>
        <columns>Media_File_Name_vod__c</columns>
        <columns>Active_vod__c</columns>
        <columns>Language_vod__c</columns>
        <columns>Category_vod__c</columns>
        <columns>Display_Order_vod__c</columns>
        <columns>Product_Strategy_vod__c</columns>
        <columns>Media_File_Size_vod__c</columns>
        <columns>PCYC_Share_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CLL_Key_Messages</fullName>
        <columns>Product_vod__c</columns>
        <columns>NAME</columns>
        <columns>Description_vod__c</columns>
        <columns>Active_vod__c</columns>
        <columns>Display_Order_vod__c</columns>
        <columns>Media_File_Name_vod__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_vod__c</field>
            <operation>contains</operation>
            <value>CLL</value>
        </filters>
        <label>CLL Key Messages</label>
        <language>en_US</language>
        <sharedTo>
            <role>Corp</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MCL_Key_Messages</fullName>
        <columns>Product_vod__c</columns>
        <columns>NAME</columns>
        <columns>Description_vod__c</columns>
        <columns>Display_Order_vod__c</columns>
        <columns>Media_File_Name_vod__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_vod__c</field>
            <operation>contains</operation>
            <value>MCL</value>
        </filters>
        <filters>
            <field>Active_vod__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>MCL Key Messages</label>
        <language>en_US</language>
        <sharedTo>
            <role>Corp</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Message</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Messages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>